--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "url": "https://github.com/semencov/tailwindcss-font-inter/issues"
   },
   "homepage": "https://github.com/semencov/tailwindcss-font-inter",
+  "peerDependencies": {
+    "tailwindcss": "~1.1.3"
+  },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
     "fontkit": "^1.8.0",
     "node-fetch": "^2.6.0",
-    "parcel-bundler": "^1.12.3",
-    "tailwindcss": "^1.1.2"
+    "parcel-bundler": "^1.12.4",
+    "tailwindcss": "^1.1.3"
   }
 }
