--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/semencov/tailwindcss-font-inter",
   "peerDependencies": {
-    "tailwindcss": "~1.1.3"
+    "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
@@ -42,5 +42,8 @@
     "node-fetch": "^2.6.0",
     "parcel-bundler": "^1.12.4",
     "tailwindcss": "^1.1.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.15"
   }
 }
