--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwindcss-font-inter",
-  "description": "TailwindCSS Plugin to integrate with Inter Typeface.",
+  "description": "TailwindCSS plugin for pleasant Inter Typeface integration.",
   "version": "1.1.0",
   "license": "MIT",
   "main": "src/index.js",
@@ -34,17 +34,17 @@
   },
   "homepage": "https://github.com/semencov/tailwindcss-font-inter",
   "peerDependencies": {
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.9.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.6.1",
-    "fontkit": "^1.8.0",
-    "node-fetch": "^2.6.0",
+    "autoprefixer": "^10.0.1",
+    "fontkit": "^1.8.1",
+    "node-fetch": "^2.6.1",
     "parcel-bundler": "^1.12.4",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.9.6"
   },
   "dependencies": {
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "parse-unit": "^1.0.1",
     "to-px": "^1.1.0"
   }
