--- a/package.json
+++ b/package.json
@@ -44,8 +44,6 @@
     "tailwindcss": "^1.9.6"
   },
   "dependencies": {
-    "lodash": "^4.17.20",
-    "parse-unit": "^1.0.1",
-    "to-px": "^1.1.0"
+    "parse-unit": "^1.0.1"
   }
 }
