--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "homepage": "https://github.com/semencov/tailwindcss-font-inter",
   "peerDependencies": {
-    "tailwindcss": "^1.9.0"
+    "tailwindcss": "^1.9.0 || ^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.8.0",
