--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "update": "node ./update.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Warn: no test specified\" && exit 0"
   },
   "repository": {
     "type": "git",
@@ -36,7 +36,10 @@
   },
   "devDependencies": {
     "fontkit": "^1.8.1",
-    "node-fetch": "^2.6.1"
+    "mkdirp": "^1.0.4",
+    "node-fetch": "^2.6.1",
+    "postcss": "^7.0.0",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "parse-unit": "^1.0.1"
