ci(github): bump action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,15 +6,19 @@ on:
       bump:
         description: 'bump type, major or minor or patch or empty string'
         default: ''
+        required: false
       dry_run:
         description: 'dry run, true or false'
         default: 'false'
+        required: true
       draft:
         description: 'draft, true or false'
         default: 'false'
+        required: true
       pre_release:
         description: 'pre release, true or false'
         default: 'false'
+        required: true
 
 jobs:
   release:
@@ -27,7 +31,8 @@ jobs:
         with:
           node-version: 12
       - run: npm install
-      - run: npm run test
+      # - run: npm run build
+      - run: npm_config_yes=true npx best-test@latest
       - uses: MeilCli/bump-release-action@v1
         with:
           config_path: '.github/bump.yml'
@@ -35,3 +40,8 @@ jobs:
           dry_run: ${{ github.event.inputs.dry_run }}
           draft: ${{ github.event.inputs.draft }}
           pre_release: ${{ github.event.inputs.pre_release }}
+      - name: 'Publish to NPM'
+        if: github.event.inputs.dry_run != 'true'
+        run: npm publish
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
