--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,7 @@ jobs:
         run: npm_config_yes=true npx best-test@latest
 
   release:
+    name: Release & Publish
     runs-on: ubuntu-latest
     needs: test
     steps:
