--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "homepage": "https://github.com/semencov/tailwindcss-font-inter",
   "peerDependencies": {
-    "tailwindcss": "^1.9.0 || ^2.0.0"
+    "tailwindcss": "^2.0.0"
   },
   "devDependencies": {
     "fontkit": "^1.8.1",
@@ -43,5 +43,8 @@
   },
   "dependencies": {
     "parse-unit": "^1.0.1"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
