--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwindcss-font-inter",
-  "description": "TailwindCSS plugin for pleasant Inter Typeface integration.",
+  "description": "TailwindCSS plugin for pleasant Inter Typeface integration",
   "version": "2.0.5",
   "license": "MIT",
   "main": "src/index.js",
@@ -11,7 +11,8 @@
   ],
   "scripts": {
     "update": "node ./update.js",
-    "test": "echo \"Warn: no test specified\" && exit 0"
+    "lint": "eslint . --fix",
+    "test": "jest && eslint ."
   },
   "repository": {
     "type": "git",
@@ -35,16 +36,55 @@
     "tailwindcss": "^2.0.0"
   },
   "devDependencies": {
+    "cssjson": "^2.1.3",
+    "eslint": "^6.0.1",
+    "eslint-config-postcss": "^2.0.2",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "fontkit": "^1.8.1",
+    "jest": "^26.6.3",
     "mkdirp": "^1.0.4",
     "node-fetch": "^2.6.1",
-    "postcss": "^7.0.0",
-    "rimraf": "^3.0.2"
+    "postcss": "^8.2.13",
+    "prettier": "^1.18.2",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^2.1.1"
   },
   "dependencies": {
     "parse-unit": "^1.0.1"
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "jest": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 2018,
+      "sourceType": "module"
+    },
+    "extends": [
+      "eslint-config-postcss",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "semi": false,
+          "singleQuote": true,
+          "printWidth": 100,
+          "tabWidth": 2,
+          "useTabs": false,
+          "trailingComma": "es5",
+          "bracketSpacing": true,
+          "parser": "flow"
+        }
+      ]
+    }
   }
 }
