ci: update actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,4 +85,4 @@ jobs:
         if: github.event.inputs.dry_run != 'true'
         run: npm publish --access public
         env:
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
