--- a/package.json
+++ b/package.json
@@ -1,64 +1,18 @@
 {
-  "name": "tailwindcss-font-inter",
-  "description": "TailwindCSS plugin for pleasant Inter Typeface integration",
-  "version": "3.0.0",
-  "license": "MIT",
-  "main": "src/index.js",
-  "author": "Yuri Sementsov <hello@smcv.dev>",
-  "files": [
-    "src",
-    "inter.json"
-  ],
-  "scripts": {
-    "update": "node ./update.js",
-    "lint": "eslint . --fix",
-    "test": "jest && eslint ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/semencov/tailwindcss-font-inter.git"
-  },
-  "keywords": [
-    "tailwindcss",
-    "tailwindcss-plugin",
-    "tailwind-plugin",
-    "inter ui",
-    "inter",
-    "font",
-    "font-feature-settings"
-  ],
-  "bugs": {
-    "email": "hello@smcv.dev",
-    "url": "https://github.com/semencov/tailwindcss-font-inter/issues"
-  },
-  "homepage": "https://github.com/semencov/tailwindcss-font-inter",
-  "peerDependencies": {
-    "tailwindcss": "^2.0.0 || ^3.0.0"
-  },
-  "devDependencies": {
-    "cssjson": "^2.1.3",
-    "eslint": "^6.0.1",
-    "eslint-config-postcss": "^2.0.2",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "fontkit": "^1.8.1",
-    "jest": "^26.6.3",
-    "mkdirp": "^1.0.4",
-    "node-fetch": "^2.6.1",
-    "postcss": "^8.2.13",
-    "prettier": "^1.18.2",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^3.0.2"
-  },
-  "dependencies": {
-    "parse-unit": "^1.0.1"
-  },
-  "engines": {
-    "node": ">=12.0.0"
-  },
-  "eslintConfig": {
-    "env": {
-      "jest": true
+    "name": "tailwindcss-font-inter",
+    "description": "TailwindCSS plugin for pleasant Inter Typeface integration",
+    "version": "3.0.0",
+    "license": "MIT",
+    "main": "src/index.js",
+    "author": "Yuri Sementsov <hello@smcv.dev>",
+    "files": [
+        "src",
+        "inter.json"
+    ],
+    "scripts": {
+        "update": "node ./update.js",
+        "lint": "eslint . --fix",
+        "test": "jest && eslint ."
     },
     "repository": {
         "type": "git",
@@ -82,6 +36,13 @@
         "tailwindcss": "^2.0.0 || ^3.0.0"
     },
     "devDependencies": {
+        "@types/eslint": "^8.2.1",
+        "@types/eslint-config-prettier": "^6.11.0",
+        "@types/eslint-plugin-prettier": "^3.1.0",
+        "@types/jest": "^27.0.3",
+        "@types/mkdirp": "^1.0.2",
+        "@types/prettier": "^2.4.2",
+        "@types/rimraf": "^3.0.2",
         "cssjson": "^2.1.3",
         "eslint": "^6.0.1",
         "eslint-config-postcss": "^2.0.2",
@@ -97,10 +58,8 @@
         "tailwindcss": "^3.0.2"
     },
     "dependencies": {
+        "@types/parse-unit": "^1.0.1",
         "parse-unit": "^1.0.1"
-    },
-    "engines": {
-        "node": ">=12.0.0"
     },
     "eslintConfig": {
         "env": {
@@ -110,8 +69,13 @@
             "ecmaVersion": 2018,
             "sourceType": "module"
         },
-        "extends": ["eslint-config-postcss", "prettier"],
-        "plugins": ["prettier"],
+        "extends": [
+            "eslint-config-postcss",
+            "prettier"
+        ],
+        "plugins": [
+            "prettier"
+        ],
         "rules": {
             "prettier/prettier": [
                 "error",
