--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
 	"name": "tailwindcss-font-inter",
 	"description": "TailwindCSS plugin for pleasant Inter Typeface integration",
-	"version": "3.1.0",
+	"version": "4.0.0",
 	"license": "MIT",
 	"main": "src/index.js",
 	"author": "Yuri Sementsov <hello@smcv.dev>",
-	"files": ["src", "inter.json"],
+	"files": [
+		"src",
+		"inter.json"
+	],
 	"scripts": {
 		"update": "node ./update.js",
 		"lint": "biome lint .",
-		"lint:fix": "biome check . --write",
-		"test": "jest"
+		"lint:fix": "biome check . --write"
 	},
 	"repository": {
 		"type": "git",
@@ -31,22 +33,13 @@
 	},
 	"homepage": "https://github.com/semencov/tailwindcss-font-inter",
 	"peerDependencies": {
-		"tailwindcss": "^2.0.0 || ^3.0.0"
+		"tailwindcss": "^3.0.0 || ^4.0.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.8.3",
+		"@biomejs/biome": "^1.9.4",
 		"fontkit": "^1.9.0",
-		"lodash": "^4.17.21",
-		"mkdirp": "^3.0.1",
 		"node-fetch": "^2.7.0",
-		"rimraf": "^6.0.1",
-		"tailwindcss": "^3.4.10",
-		"cssjson": "^2.1.3",
-		"jest": "^26.6.3",
-		"postcss": "^8.2.13"
-	},
-	"dependencies": {
-		"parse-unit": "^1.0.1"
+		"postcss": "^8.5.1"
 	},
 	"engines": {
 		"node": ">=18.0.0"
